posiGen_FullsendBox/src/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>CreatedDate -  DAY(DATEVALUE(CreatedDate)) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Incentive__c</fullName>
        <label>Customer Incentive</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name_And_Property_Address__c</fullName>
        <formula>AccountId__r.Name + &apos; at &apos; +  Property__r.Address_Line_1__c + &apos;, &apos; + Property__r.City__c + &apos; &apos; + TEXT(Property__r.State__c) + &apos; &apos; + Property__r.ZipCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name And Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Waives_Roof_Layout_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customer Waives Roof Layout Approvals</inlineHelpText>
        <label>Customer Waives Roof Layout Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Electrical_Completed__c</fullName>
        <label>Date Electrical Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Released_to_Contractor__c</fullName>
        <label>Date Released to Contractor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Released_to_Installer__c</fullName>
        <label>Date Released to Installer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Contract_Approved_to_EU_Complete__c</fullName>
        <formula>EU_Completed_Date__c - Contracts_Approved_Date__c</formula>
        <label>Days Contract Approved to EU Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Contract_Approved_to_Feasible__c</fullName>
        <formula>Roof_Assessment_Complete_Date__c -  Contracts_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Contract Approved to Feasible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Contract_Approved_to_Installed__c</fullName>
        <formula>Install_Completed__c -  Contracts_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Contract Approved to Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Feasible_to_Installed__c</fullName>
        <formula>Install_Completed__c -  Roof_Assessment_Complete_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Feasible to Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Final_Inspection__c</fullName>
        <formula>Lead_Age_Converted__c + ( Final_Inspection_Notification_Received__c  - DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Final Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Install_Completed__c</fullName>
        <formula>Lead_Age_Converted__c + ( Install_Completed__c  - DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Install Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Install_Released__c</fullName>
        <formula>Lead_Age_Converted__c + (Install_Released__c - DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Install Released</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Lead_Created_to_Installed__c</fullName>
        <formula>Install_Completed__c - AccountId__r.Lead_Created_Date__c</formula>
        <label>Days Lead Created to Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_PIS_to_EU_complete__c</fullName>
        <formula>EU_Completed_Date__c -  PVI_Placed_In_Service_Date__c</formula>
        <label>Days PIS to EU complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Page_Four_Mailed_Date__c</fullName>
        <formula>Today () -  Page_Four_Mailed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Page Four Mailed Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disconnect_StatusX__c</fullName>
        <formula>Text(Opportunity__r.Disconnect_Status__c)</formula>
        <label>Disconnect Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disconnect_Status__c</fullName>
        <label>Disconnect Status</label>
        <picklist>
            <picklistValues>
                <fullName>Never Disconnected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconnected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Docusign_Fields_Contain_Data__c</fullName>
        <formula>AND(NOT(ISBLANK(  Property__r.AssessorOwnerName1__c  )),NOT(ISBLANK(  Property__r.Assessor_House__c )),NOT(ISBLANK(  Property__r.Assessor_Street_Name__c  )),NOT(ISBLANK(  Property__r.Assessor_City__c  )),NOT(ISBLANK(  TEXT(Property__r.Assessor_State__c) )),NOT(ISBLANK(   Property__r.Assessor_ZIP__c ) ),NOT(ISBLANK( Property__r.Name)))</formula>
        <label>Docusign Fields Contain Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_client_have_shading_around_home__c</fullName>
        <description>From lead</description>
        <label>Does client have shading around home?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Driver_s_License_State_ID__c</fullName>
        <inlineHelpText>Any extra documents customer has that identifies who they are....</inlineHelpText>
        <label>Driver&apos;s License/State ID</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Completed_DateX__c</fullName>
        <formula>Opportunity__r.EA_Completed_Date__c</formula>
        <label>EA Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Completed_Date__c</fullName>
        <description>This is populated from the EA Project</description>
        <label>EA Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_StatusX__c</fullName>
        <formula>Opportunity__r.EA_Status__c</formula>
        <label>EA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Status__c</fullName>
        <label>EA Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Amount__c</fullName>
        <formula>Validation_EE_Monthly_Payment__c  *  EE_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Audit_Age__c</fullName>
        <formula>IF( ISNULL(  EA_Completed_Date__c ) , TODAY() - Contracts_Approved_Date__c , EA_Completed_Date__c - Contracts_Approved_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Audit Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Lease_Amount__c</fullName>
        <formula>IF( Has_EE_as_a_Solar_Product__c , 1200, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Lease Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Month_01__c</fullName>
        <label>EE Month 01</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Month_02__c</fullName>
        <label>EE Month 02</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Month_03__c</fullName>
        <label>EE Month 03</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Pipeline_Stage__c</fullName>
        <formula>IF(OR(EA_Status__c = &quot;Cancelled&quot;,EA_Status__c = &quot;Complete - Cancel&quot;, EU_Status__c = &quot;Cancelled&quot;), &quot;Cancelled&quot;,IF(AND(EA_Status__c = &quot;Completed&quot;,EU_Status__c = &quot;Completed&quot;), &quot;EU Completed&quot;,IF(AND(EA_Status__c = &quot;Completed&quot;,EU_Status__c = &quot;On Hold&quot;), &quot;EU On Hold&quot;,IF(AND(EA_Status__c = &quot;Completed&quot;,OR(EU_Status__c = &quot;Active&quot;,ISBLANK(EU_Status__c))), &quot;Pending EU&quot;,IF(EA_Status__c = &quot;On Hold&quot;, &quot;EA On Hold&quot;,IF(OR(EA_Status__c = &quot;Active&quot;, ISBLANK(EA_Status__c) ), &quot;Pending EA&quot;, &quot;-&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Pipeline Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Stage__c</fullName>
        <label>EE Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Not Ready for EE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EE_Term__c</fullName>
        <inlineHelpText>In Months</inlineHelpText>
        <label>EE Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Complete_Age__c</fullName>
        <formula>IF( ISNULL(  EU_Completed_Date__c ) , TODAY() - Contracts_Approved_Date__c , EU_Completed_Date__c - Contracts_Approved_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Complete Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Completed_DateX__c</fullName>
        <formula>Opportunity__r.EU_Completed_Date__c</formula>
        <label>EU Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Completed_Date__c</fullName>
        <description>This is populated by the EU Project</description>
        <label>EU Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Elec_Savings_DlrsPerYr__c</fullName>
        <label>EU Projected Electrical Savings $/yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Elec_kWh_perYear_Savings__c</fullName>
        <label>EU Projected Electrical kWh/yr Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Electrical_Savings_yrX__c</fullName>
        <formula>Text(Opportunity__r.EU_Projected_Elec_Savings_DlrsPerYr__c)</formula>
        <label>EU Projected Electrical Savings $/yr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Projected_NG_Therms_PerYear_Savings__c</fullName>
        <label>EU Projected Nat Gas Therms/yr Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Nat_Gas_Savings_yrX__c</fullName>
        <formula>TEXT(Opportunity__r.EU_Projected_Nat_Gas_Savings_yr__c)</formula>
        <label>EU Projected Nat Gas Savings $/yr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Nat_Gas_Savings_yr__c</fullName>
        <label>EU Projected Nat Gas Savings $/yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_Projected_Nat_Gas_Therms_yr_SavingsX__c</fullName>
        <formula>Text(Opportunity__r.EU_Projected_NG_Therms_PerYear_Savings__c)</formula>
        <label>EU Projected Nat Gas Therms/yr Savings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_StatusX__c</fullName>
        <formula>Opportunity__r.EU_Status__c</formula>
        <label>EU Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Status__c</fullName>
        <label>EU Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Total_Cost__c</fullName>
        <description>This should eventually populate from the EU Project</description>
        <label>EU Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Elec_Account_Middle_Name__c</fullName>
        <label>Elec Account Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_City__c</fullName>
        <label>Elec Acct City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_First_Name__c</fullName>
        <label>Elec Acct First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Full_Name__c</fullName>
        <formula>IF( ISBLANK( Elec_Account_Middle_Name__c ) ,  Elec_Acct_First_Name__c &amp;&quot; &quot;&amp; Elec_Acct_Last_Name__c , Elec_Acct_First_Name__c &amp;&quot; &quot;&amp; Elec_Account_Middle_Name__c &amp;&quot; &quot; &amp; Elec_Acct_Last_Name__c )</formula>
        <label>Elec Acct Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Last_Name__c</fullName>
        <label>Elec Acct Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Number__c</fullName>
        <label>Elec Acct Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Password__c</fullName>
        <label>Elec Acct Password</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_State__c</fullName>
        <label>Elec Acct State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Street_1__c</fullName>
        <label>Elec Acct Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Street_2__c</fullName>
        <label>Elec Acct Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Username__c</fullName>
        <description>The customer&apos;s electric utility username.</description>
        <label>Elec Acct Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_ZipLast4__c</fullName>
        <label>Elec Acct ZipLast4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Acct_Zip__c</fullName>
        <label>Elec Acct Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electric_Bill__c</fullName>
        <label>Electric Bill</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electric_Usage_10__c</fullName>
        <inlineHelpText>kWh</inlineHelpText>
        <label>Electric Usage Oct</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_Usage_11__c</fullName>
        <inlineHelpText>kWh</inlineHelpText>
        <label>Electric Usage Nov</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_Usage_12__c</fullName>
        <inlineHelpText>kWh</inlineHelpText>
        <label>Electric Usage Dec</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Service_Panel__c</fullName>
        <label>Electrical Service Panel</label>
        <picklist>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Electricity Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Utility_Type__c</field>
                <operation>equals</operation>
                <value>Electric</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities16</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Name__c</fullName>
        <label>Employer Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Charge__c</fullName>
        <formula>IF(Has_EE_as_a_Solar_Product__c , 10,  0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Efficiency Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Completion_Date__c</fullName>
        <label>Energy Efficiency Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Contractor__c</fullName>
        <label>Energy Efficiency Contractor</label>
        <picklist>
            <picklistValues>
                <fullName>Core USA (2012)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retro Fitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E &amp; I Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. Green Jeans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviro Green/Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebirth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Cancellation_Date__c</fullName>
        <description>7 Calendar Days in LA, 3 Business Days otherwise.</description>
        <formula>if( ISPICKVAL(Property__r.Assessor_State__c,&quot;LA&quot;),(Property__r.Sales_Appointment__c + 7),if(MOD( Property__r.Sales_Appointment__c - DATE(2015,10,12),7)&lt;3,Property__r.Sales_Appointment__c +3,if(MOD( Property__r.Sales_Appointment__c - DATE(2015,10,12),7)=6,Property__r.Sales_Appointment__c +4,Property__r.Sales_Appointment__c +5)))</formula>
        <label>Estimated Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_First_Payment_Date__c</fullName>
        <description>only for LA, use field on the Property object for market specific dates</description>
        <formula>IF( DAY(Property__r.Sales_Appointment__c) &lt; 16, DATE( IF( MONTH(Property__r.Sales_Appointment__c) &gt; 9, YEAR(Property__r.Sales_Appointment__c)+ 1, YEAR(Property__r.Sales_Appointment__c) ), MONTH(Property__r.Sales_Appointment__c + 90), 1 ), DATE( IF( MONTH(Property__r.Sales_Appointment__c) &gt; 8, YEAR(Property__r.Sales_Appointment__c)+ 1, YEAR(Property__r.Sales_Appointment__c) ), MONTH(Property__r.Sales_Appointment__c + 120), 1 ) )</formula>
        <label>Estimated First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Lease_Amount__c</fullName>
        <formula>IF( Lease_System_Lease_Amount__c &gt; 0, Lease_System_Lease_Amount__c +  EE_Amount__c ,  Lease_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Lease Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Lease_Start_Date__c</fullName>
        <formula>IF(NOT(ISNULL(Install_Completed__c)), Install_Completed__c + 210,IF(NOT(ISNULL( Roof_Assessment_Complete_Date__c )), Roof_Assessment_Complete_Date__c + 240,IF(NOT(ISNULL( Contracts_Approved_Date__c )), Contracts_Approved_Date__c + 250,null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceptions_DC__c</fullName>
        <formula>IF(ISBLANK(Property_Address__c) &amp;&amp; ( Copy_of_Pipeline_Stage__c = &quot;Feasibility Analysis&quot; || Copy_of_Pipeline_Stage__c= &quot;Layout Approval&quot; || Copy_of_Pipeline_Stage__c= &quot;Closed Won&quot; || Copy_of_Pipeline_Stage__c= &quot;Release to Installer&quot; || Copy_of_Pipeline_Stage__c= &quot;PV System Left Warehouse&quot; || Copy_of_Pipeline_Stage__c= &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c= &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c= &quot;Boarded&quot;), &quot;Property_Address__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(Contracts_Approved_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c= &quot;Feasibility Analysis&quot; || Copy_of_Pipeline_Stage__c= &quot;Layout Approval&quot; || Copy_of_Pipeline_Stage__c= &quot;Closed Won&quot; || Copy_of_Pipeline_Stage__c= &quot;Release to Installer&quot; || Copy_of_Pipeline_Stage__c= &quot;PV System Left Warehouse&quot; || Copy_of_Pipeline_Stage__c= &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c= &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c= &quot;Boarded&quot;), &quot;Contracts_Approved_Date__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(PVA_Assessment_Complete_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c= &quot;Layout Approval&quot; || Copy_of_Pipeline_Stage__c= &quot;Closed Won&quot; || Copy_of_Pipeline_Stage__c= &quot;Release to Installer&quot; || Copy_of_Pipeline_Stage__c= &quot;PV System Left Warehouse&quot; || Copy_of_Pipeline_Stage__c= &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c= &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c= &quot;Boarded&quot;), &quot;PVA_Assessment_Complete_Date__c Is Missing, &quot;,&quot;&quot;)</formula>
        <label>Exceptions DC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_EE__c</fullName>
        <formula>IF(ISBLANK(EU_Completed_Date__c) &amp;&amp; ( Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Completed_Date__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(EU_Projected_Elec_kWh_perYear_Savings__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Projected_Elec_kWh_perYear_Savings__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(EU_Projected_Elec_Savings_DlrsPerYr__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Projected_Elec_Savings_DlrsPerYr__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(EU_Projected_Nat_Gas_Savings_yr__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Projected_Nat_Gas_Savings_yr__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(EU_Projected_NG_Therms_PerYear_Savings__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Projected_NG_Therms_PerYear_Savings__c Is Missing, &quot;,&quot;&quot;)</formula>
        <label>Exceptions EE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_FIN__c</fullName>
        <formula>IF(ISBLANK(PVI_Total_Cost__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;PVI_Total_Cost__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(BB_Funding_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;BB_Funding_Date__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(BB_Funding_Amount__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;BB_Funding_Amount__c Is Missing, &quot;,&quot;&quot;) &amp; IF((ISBLANK(EU_Total_Cost__c)&amp;&amp;  Has_EE_as_a_Solar_Product__c ) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;EU_Total_Cost__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(ITC_Funding_Amount__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;ITC_Funding_Amount__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(ITC_Funding_Recd_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;ITC_Funding_Recd_Date__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(State_Tax_Credit_Refund_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; ), &quot;State_Tax_Credit_Refund_Date__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(State_Tax_Credit_Refund_Amount__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot;  ), &quot;State_Tax_Credit_Refund_Amount__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(Retail_Price__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;Retail_Price__c Is Missing, &quot;,&quot;&quot;) &amp; IF(ISBLANK(System_Size_in_KW__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;System_Size_in_KW__c Is Missing, &quot;,&quot;&quot;) &amp;IF(ISBLANK(Lease_Fee__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;Lease_Fee__c Is Missing, &quot;,&quot;&quot;) &amp;IF(ISBLANK(Lease_Start_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;Lease_Start_Date__c Is Missing, &quot;,&quot;&quot;)</formula>
        <label>Exceptions FIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exceptions_OPS__c</fullName>
        <formula>IF(ISBLANK(PVI_Rails_and_Panels_Left_WH_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;PV System Left Warehouse&quot; || Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;PVI_Rails_and_Panels_Left_WH_Date__c Is Missing, &quot;,&quot;&quot;) &amp;IF(ISBLANK(PVI_Placed_In_Service_Date__c) &amp;&amp; (Copy_of_Pipeline_Stage__c = &quot;Pending EU&quot; || Copy_of_Pipeline_Stage__c = &quot;Need to Board&quot; || Copy_of_Pipeline_Stage__c = &quot;Boarded&quot;), &quot;PVI_Placed_In_Service_Date__c Is Missing, &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceptions OPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <label>ExpectedRevenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FICO_Source__c</fullName>
        <description>Import note for reporting service</description>
        <label>FICO Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO_Susco__c</fullName>
        <label>FICO_Susco</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FICO_validated__c</fullName>
        <description>Credit Score reported from reporting service</description>
        <label>FICO</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <formula>Gross_System_Cost_in_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Friend_Contact_1__c</fullName>
        <label>Family/Friend Contact 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Friend_Contact_2__c</fullName>
        <label>Family/Friend Contact 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasible_Solar_Hot_Water_Heater__c</fullName>
        <label>Feasible Solar Hot Water Heater</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feasible_Solar__c</fullName>
        <inlineHelpText>Enter feasible solar from Roof Assessment</inlineHelpText>
        <label>Feasible Solar Size</label>
        <picklist>
            <picklistValues>
                <fullName>Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.7 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.5Kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.6Kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.8kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 kw</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>